extend padding for 'now' to prevent safari cutoff glitch

--- a/assets/sass/_sitenav.scss
+++ b/assets/sass/_sitenav.scss
@@ -196,6 +196,7 @@
   .dc-biglist--now h2{
     position: relative;
     margin-bottom: .1em;
+    padding-right: .15em;
   }
   .dc-biglist--now .dc-cv--entry{
     height: 1.07em;
